removed overflow auto to fix #92, mobile scrolling issues

--- a/src/css/components/checkout/checkout.styl
+++ b/src/css/components/checkout/checkout.styl
@@ -1,7 +1,6 @@
 /* Checkout Stuff */
 html,body
   -webkit-overflow-scrolling: touch !important
-  overflow: auto !important
   height: 100% !important
 
   *
